Fix styling variance between upload files and review step (#985)
* Fix background colour variance between upload files and review step

* Add box shadows for all steps in the form

* Fix font size and background color variance

* Remove review-section styling and use alert daisy ui card instead

* Remove unnecessary dd and dt styling

* Fix extra spacing in css files

* Remove review-summary css

* Remove extra css added to base.css

* Make file upload information card as alert too for consistency

* Fix font size difference in headings

* Remove extra gap between title and content in review step

* Remove css styling for dt and add daisy ui styling in the review page

* Fix template linting error

* Fix html lint check

* Revert "Merge branch 'master' of https://github.com/NationalCentreTruthReconciliation/Secure-Record-Transfer into 982-make-styling-consistent-on-review-page"

This reverts commit ae6aa5b80cd4e9e83674971a13b2e917aadfbc13, reversing
changes made to 628a175826c9511b28e7c38da3eedcb9e56e7e71.

* Revert "Remove css styling for dt and add daisy ui styling in the review page"

This reverts commit 690786fce34534afbf10c5f25e31f7e26420a0e0.

* Fix failing e2e test

* Fix html linting error

* Fix failing e2e test

* Revert extra files changed in this PR

--- a/app/recordtransfer/static/recordtransfer/css/submission_form/review_step.css
+++ b/app/recordtransfer/static/recordtransfer/css/submission_form/review_step.css
@@ -1,30 +1,8 @@
-.review-summary {
-    max-width: 800px;
-    margin: 2rem 0;
-}
-
-.review-section {
-    margin-bottom: 2rem;
-    padding: 1.5rem;
-    background: #f8f9fa;
-    border-radius: 8px;
-}
-
 .field-list {
     display: grid;
     grid-template-columns: 30% 70%;
     gap: 0.5rem;
     margin: 0;
-}
-
-dt {
-    font-weight: bold;
-    color: #495057;
-}
-
-dd {
-    margin: 0;
-    color: #212529;
 }
 
 .empty-value,
